--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>JavaScript Base</h1>
-    <script src="main.js"></script>
+    <script src="tes.js"></script>
 </body>
 </html>
